--- a/project-perception/public/index.html
+++ b/project-perception/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Kayla Lee, Wendy Ding, Samantha Chow, Bryan Lin" /> 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The home page of Project Perception"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Lato:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Project Perception</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
